--- a/backend/rasa/actions/Dockerfile
+++ b/backend/rasa/actions/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /app/actions
 
 COPY . .
 
+USER root
 RUN pip install --no-cache-dir -r requirements.txt || true
 
 CMD ["rasa", "run", "actions"]
