--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - "8000:8000"
     depends_on:
       - rasa
+    command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
     restart: always
 
   rasa:
@@ -24,7 +25,7 @@ services:
     volumes:
       - ./backend/rasa:/app
     command: >
-      run --enable-api --cors "*" --debug
+      run --enable-api --cors "*" --debug --host 0.0.0.0
     restart: always
 
   action_server:
@@ -37,5 +38,5 @@ services:
       - ./backend/rasa/actions:/app/actions
     ports:
       - "5055:5055"
-    command: ["rasa", "run", "actions"]
+    command: ["rasa", "run", "actions", "--port", "5055", "--cors", "*", "--debug", "--host", "0.0.0.0"]
     restart: always
