--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,18 +14,19 @@ services:
     command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
     restart: always
 
-  rasa:
-    build:
+    rasa:
+      build:
       context: ./backend/rasa
       dockerfile: Dockerfile
-    image: uniway_rasa
-    container_name: rasa_server
-    ports:
-      - "5005:5005"
-    volumes:
-      - ./backend/rasa:/app
-    
-    command: ["rasa", "run", "--enable-api", "--cors", "*", "--debug", "--host", "0.0.0.0"]
+      image: uniway_rasa
+      container_name: rasa_server
+      ports:
+        - "5005:5005"
+      volumes:
+        - ./backend/rasa:/app
+      command: ["rasa", "run", "--enable-api", "--cors", "*", "--debug", "--port", "5005", "--host", "0.0.0.0"]
+      restart: always
+
 
 
     restart: always
