--- a/backend/rasa/actions/Dockerfile
+++ b/backend/rasa/actions/Dockerfile
@@ -1,13 +1,12 @@
 FROM rasa/rasa-sdk:3.6.2
 
-ENTRYPOINT []
-
-
 WORKDIR /app/actions
 
 COPY . .
 
 USER root
+
 RUN pip install --no-cache-dir -r requirements.txt || true
 
-CMD ["rasa", "run", "actions"]
+CMD ["python", "-m", "rasa_sdk", "--port", "5055"]
+
