--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,9 @@ services:
       - "5005:5005"
     volumes:
       - ./backend/rasa:/app
-    command: ["rasa", "run", "--enable-api", "--cors", "*", "--debug", "--port", "5005", "--host", "0.0.0.0"]
+    command: ["run", "--enable-api", "--cors", "*", "--debug", "--port", "5005", "--host", "0.0.0.0"]
     restart: always
+
 
 
 
