--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     volumes:
       - ./backend/rasa:/app
     command: >
-      rasa run --enable-api --cors "*" --debug --port 5005 --host 0.0.0.0
+      run --enable-api --cors "*" --debug --port 5005 --host 0.0.0.0
 
     restart: always
 
