--- a/backend/core/Dockerfile
+++ b/backend/core/Dockerfile
@@ -1,9 +1,30 @@
-FROM python:3.9-slim
+# Use official Python base image
+FROM python:3.10-slim
 
+# Install necessary system packages for selenium (Chrome and ChromeDriver)
+RUN apt-get update && apt-get install -y \
+    wget \
+    curl \
+    unzip \
+    chromium \
+    chromium-driver \
+    && apt-get clean
+
+# Install dependencies
+COPY requirements.txt /app/
 WORKDIR /app
+RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
+# Copy the app code to the container
+COPY . /app/
 
-RUN pip install --no-cache-dir -r requirements.txt 
+# Set environment variables for Chrome (optional)
+ENV DISPLAY=:99
+ENV CHROME_BIN=/usr/bin/chromium
+ENV CHROMEDRIVER_PATH=/usr/bin/chromedriver
 
+# Expose the port that Uvicorn will run on
+EXPOSE 8000
+
+# Run the FastAPI app with Uvicorn
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
