--- a/backend/rasa/Dockerfile
+++ b/backend/rasa/Dockerfile
@@ -1,7 +1,11 @@
+# Use the official Rasa image as base
 FROM rasa/rasa:3.6.10-full
 
+# Set working directory inside the container
 WORKDIR /app
 
+# Copy the entire local Rasa directory to the container
 COPY . .
 
-CMD ["rasa", "run", "--enable-api", "--cors", "*", "--debug", "--host", "0.0.0.0"]
+# Define the command to run the Rasa server
+CMD ["rasa", "run", "--enable-api", "--cors", "*", "--debug", "--port", "5005", "--host", "0.0.0.0"]
