--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,10 @@ beautifulsoup4==4.12.3
 selenium==4.18.1
 rapidfuzz==3.6.1
 
-# --- Rasa Bot Framework ---
-rasa==3.5.10
-rasa-sdk==3.5.1
+# --- Rasa Bot Framework (v3.1) ---
+rasa==3.1.0
+rasa-sdk==3.1.1  # Most stable match for rasa 3.1
 
 # Optional NLP engine (only if used)
-# spacy==3.7.2
+# spacy==3.2.4
 # python -m spacy download en_core_web_md
