--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,65 +1,45 @@
-version: '3.9'
+version: '3.8'
 
 services:
-  fastapi:
+  db:
+    image: postgres:15
+    container_name: uniway-db
+    restart: always
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: uniway
+    ports:
+      - "5432:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: uniway-pgadmin
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@uniway.com
+      PGADMIN_DEFAULT_PASSWORD: uniway123
+    ports:
+      - "5050:80"
+    depends_on:
+      - db
+
+  backend:
     build:
-      context: ./backend/core
-      dockerfile: Dockerfile
-    image: uniway_fastapi
-    container_name: fastapi_app
+      context: .
+      dockerfile: backend/app/Dockerfile
+    container_name: uniway-backend
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+    volumes:
+      - ./backend:/app
+    env_file:
+      - .env.docker
+    depends_on:
+      - db
     ports:
       - "8000:8000"
-    depends_on:
-      - rasa
-    command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
-    restart: always
 
-  rasa:
-    build:
-      context: ./backend/rasa
-      dockerfile: Dockerfile
-    image: uniway_rasa
-    container_name: rasa_server
-    ports:
-      - "5005:5005"
-    volumes:
-      - ./backend/rasa:/app
-    command: [
-      "rasa", "run",
-      "--enable-api",
-      "--cors", "*",
-      "--debug",
-      "--port", "5005",
-      "--host", "0.0.0.0"
-    ]
-    restart: always
-
-
-
-
-
-    
-
-  action_server:
-    build:
-      context: ./backend/rasa/actions
-      dockerfile: Dockerfile
-    image: uniway_action_server_fixed
-    container_name: rasa_actions
-    volumes:
-      - ./backend/rasa/actions:/app/actions
-    ports:
-      - "5055:5055"
-    command: ["rasa", "run", "actions", "--port", "5055", "--cors", "*", "--debug"]
-    restart: always
-
-  nginx:
-    build:
-      context: ./nginx
-      dockerfile: Dockerfile
-    container_name: uniway_nginx
-    ports:
-      - "80:80"
-    depends_on:
-      - fastapi
-    restart: always
+volumes:
+  pgdata:
